--- a/ClienteAndroid/app/src/main/res/layout/item_course.xml
+++ b/ClienteAndroid/app/src/main/res/layout/item_course.xml
@@ -4,10 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="?attr/itemBottomBarBackgroundColor"
-    android:layout_marginLeft="25dp"
-    android:layout_marginRight="25dp"
-    android:layout_marginTop="25dp"
+    app:cardBackgroundColor="?attr/cCardBackgroundColor"
+    app:cardElevation="0dp"
+    android:layout_marginLeft="32dp"
+    android:layout_marginRight="32dp"
+    android:layout_marginTop="24dp"
     app:cardCornerRadius="15dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
@@ -23,7 +24,7 @@
             android:id="@+id/item_course_topview"
             android:layout_width="match_parent"
             android:layout_height="15dp"
-            android:background="?attr/itemTopBarBackgroundColor"
+            android:background="?attr/cDecorationBarBackgroundColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -41,7 +42,7 @@
                 android:padding="15dp"
                 android:textAlignment="center"
                 android:text=""
-                android:textColor="@color/white"
+                android:textColor="?attr/cColorOnPrimary"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
