--- a/ClienteAndroid/app/src/main/res/layout/item_dropdown.xml
+++ b/ClienteAndroid/app/src/main/res/layout/item_dropdown.xml
@@ -7,5 +7,5 @@
     android:textSize="16sp"
     android:textStyle="bold"
     android:padding="15dp"
-    android:textColor="@color/black"
+    android:textColor="?attr/cColorOnPrimary"
     />
