--- a/ClienteAndroid/app/src/main/res/layout/item_schedule.xml
+++ b/ClienteAndroid/app/src/main/res/layout/item_schedule.xml
@@ -4,11 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="?attr/itemBottomBarBackgroundColor"
-    android:layout_marginLeft="25dp"
-    android:layout_marginRight="25dp"
-    android:layout_marginTop="25dp"
+    app:cardBackgroundColor="?attr/cCardBackgroundColor"
+    android:layout_marginLeft="32dp"
+    android:layout_marginRight="32dp"
+    android:layout_marginTop="24dp"
     app:cardCornerRadius="15dp"
+    app:cardElevation="0dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:id="@+id/item_schedule_cardview"
@@ -24,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="?attr/itemTopBarBackgroundColor"
+            android:background="?attr/cDecorationBarBackgroundColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -37,7 +38,7 @@
                 android:padding="15dp"
                 android:text="LUNES"
                 android:textAlignment="viewStart"
-                android:textColor="@color/white"
+                android:textColor="?attr/cColorOnSecondary"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +53,7 @@
                 android:padding="15dp"
                 android:text="8:00 - 9:00"
                 android:textAlignment="viewEnd"
-                android:textColor="@color/white"
+                android:textColor="?attr/cColorOnSecondary"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +74,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="15dp"
                 android:paddingLeft="15dp"
+                android:textColor="?attr/cColorSchedule"
                 android:text="@string/item_schedule_teacher"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -83,6 +85,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="15dp"
                 android:paddingLeft="15dp"
+                android:textColor="?attr/cColorSchedule"
                 android:text="@string/item_schedule_subject"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -91,6 +94,7 @@
                 android:id="@+id/item_schedule_classroom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="?attr/cColorSchedule"
                 android:paddingTop="15dp"
                 android:paddingLeft="15dp"
                 android:text="@string/item_schedule_classroom"
@@ -101,6 +105,7 @@
                 android:id="@+id/item_schedule_group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="?attr/cColorSchedule"
                 android:paddingTop="15dp"
                 android:paddingBottom="15dp"
                 android:paddingLeft="15dp"
