--- a/ClienteAndroid/app/src/main/res/layout/activity_login.xml
+++ b/ClienteAndroid/app/src/main/res/layout/activity_login.xml
@@ -4,159 +4,226 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity"
-    android:background="?attr/primaryBackgroundColor">
+    tools:context=".activities.MainActivity"
+    android:background="?attr/cBackgroundColor">
 
-    <ImageView
-        android:id="@+id/act_login_settings"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:src="@drawable/ic_baseline_settings_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/act_login_imageview"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-
-        android:layout_marginTop="75dp"
-        android:src="@drawable/login"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationViewLoading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading2" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/act_login_cardview_username"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginEnd="50dp"
-        android:backgroundTint="?attr/loginInputCardBackgroundColor"
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/act_login_imageview"
-        app:cardCornerRadius="15dp"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/titleTextView2"
+            android:transitionName="title2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="@string/act_login_hello"
+            android:textColor="?attr/cColorOnPrimary"
+            android:textSize="32sp" />
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:tint="?attr/loginInputHintColor"
-                android:src="@drawable/ic_teacher" />
+        <TextView
+            android:id="@+id/titleTextView"
+            android:transitionName="title"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/act_login_text"
+            android:gravity="center_vertical"
+            android:textColor="?attr/cColorOnPrimary"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/act_login_input_username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:hint="@string/act_login_input_username"
-                android:background="?attr/loginInputCardBackgroundColor"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:textColorHint="?attr/loginInputHintColor"
-                android:textColor="?attr/loginInputTextColor"
-                android:paddingRight="20dp"
-                android:paddingLeft="10dp"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/act_login_imageview"
-                android:inputType="text" />
+    </LinearLayout>
 
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/act_login_cardview_password"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="50dp"
-        app:cardCornerRadius="15dp"
-        android:backgroundTint="?attr/loginInputCardBackgroundColor"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/act_login_cardview_username">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/usernameCardView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="?attr/cCardLoginInputBackgroundColor"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="0dp">
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:tint="?attr/loginInputHintColor"
-                android:padding="5dp"
-                android:src="@drawable/ic_password" />
-
-            <EditText
-                android:id="@+id/act_login_input_password"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_marginTop="100dp"
-                android:background="?attr/loginInputCardBackgroundColor"
-                android:ems="10"
-                android:hint="@string/act_login_input_password"
-                android:inputType="textPassword"
-                android:textColorHint="?attr/loginInputHintColor"
-                android:textColor="?attr/loginInputTextColor"
-                android:paddingLeft="10dp"
-                android:paddingTop="20dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="20dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_teacher"
+                    app:tint="?attr/cInputHintColor" />
+
+                <EditText
+                    android:id="@+id/usernameInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="?attr/cCardLoginInputBackgroundColor"
+                    android:hint="@string/act_login_input_username"
+                    android:inputType="text"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="20dp"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="20dp"
+                    android:textColor="?attr/cColorOnPrimary"
+                    android:textColorHint="?attr/cInputHintColor"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/passwordCardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            app:cardBackgroundColor="?attr/cCardLoginInputBackgroundColor"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="0dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_password"
+                    app:tint="?attr/cInputHintColor" />
+
+                <EditText
+                    android:id="@+id/passwordInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_marginTop="100dp"
+                    android:background="?attr/cCardLoginInputBackgroundColor"
+                    android:ems="10"
+                    android:hint="@string/act_login_input_password"
+                    android:inputType="textPassword"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="20dp"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="20dp"
+                    android:textColor="?attr/cColorOnPrimary"
+                    android:textColorHint="?attr/cInputHintColor"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/loginButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginRight="48dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:text="@string/act_login_button_login"
+            app:cardBackgroundColor="?attr/cDefaultButtonBackgroundColor"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="0dp">
+
+            <TextView
+                android:id="@+id/loginButtonText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:padding="20dp"
+                android:text="@string/act_login_button_login"
+                android:textAllCaps="true"
+                android:textColor="?attr/cColorOnSecondary"
                 android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/act_login_cardview_username" />
+                android:textStyle="bold" />
 
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/act_login_button_login"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
-        android:text="@string/act_login_button_login"
-        android:backgroundTint="?attr/loginButtonBackgroundColor"
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="15dp"
+    <LinearLayout
+        android:id="@+id/settingsButton"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/ic_baseline_settings_24"
+            app:tint="?attr/cColorOnPrimary" />
+
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/act_login_button_login"
-            android:textAllCaps="true"
-            android:textColor="?attr/onDarkTextColor"
-            android:gravity="center"
-            android:padding="20dp"
-            android:textSize="18sp"
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:paddingLeft="8dp"
+            android:paddingTop="16dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="16dp"
+            android:text="@string/act_login_settings"
+            android:textColor="?attr/cColorOnPrimary"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
