--- a/ClienteAndroid/app/src/main/res/layout/item_teacher.xml
+++ b/ClienteAndroid/app/src/main/res/layout/item_teacher.xml
@@ -4,10 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="?attr/itemBottomBarBackgroundColor"
-    android:layout_marginLeft="25dp"
-    android:layout_marginRight="25dp"
-    android:layout_marginTop="25dp"
+    app:cardBackgroundColor="?attr/cCardBackgroundColor"
+    app:cardElevation="0dp"
+    android:layout_marginLeft="32dp"
+    android:layout_marginRight="32dp"
+    android:layout_marginTop="24dp"
     app:cardCornerRadius="15dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
@@ -26,10 +27,10 @@
             android:text="Nombre"
             android:padding="15dp"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="?attr/cColorOnSecondary"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:background="?attr/itemTopBarBackgroundColor"
+            android:background="?attr/cDecorationBarBackgroundColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -47,7 +48,7 @@
                 android:paddingTop="15dp"
                 android:paddingLeft="15dp"
                 android:text="@string/item_teacher_department"
-                android:textColor="@color/white"
+                android:textColor="?attr/cColorOnPrimary"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +63,7 @@
                 android:paddingLeft="15dp"
                 android:paddingBottom="15dp"
                 android:text="@string/item_teacher_abreviation"
-                android:textColor="@color/white"
+                android:textColor="?attr/cColorOnPrimary"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
